# xeus-sqlite

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  azure-pipelines.yml  build.sh  chinook.db  environment-dev.yml  environment-wasm-build.yml  environment-wasm-host.yml  environment.yml  postBuild  xeus-sqliteConfig.cmake.in
.azure-pipelines/: azure-pipelines-linux.yml  unix-build.yml
.github/workflows/: main.yml
cmake_emscripten/: FindSQLite3.cmake
docs/: Doxyfile  environment.yml
docs/source/: api.rst  conf.py  dev-build-options.rst  environment.yml  getting_started.rst  index.rst  installation.rst  sqlite_magic.rst  usage.rst  xvega_magic.rst
docs/xml/: classxeus__sqlite_1_1interpreter.xml  dir_05ab2071879a6f481085812fb5839755.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  index.xml  namespacexeus__sqlite.xml  xeus__sqlite__config_8hpp.xml  xeus__sqlite__interpreter_8hpp.xml
examples/: Simple operations.ipynb  Untitled.ipynb  XVega operations.ipynb  chinook.db  example_db.db  vega_example.ipynb
include/xeus-calc/: xeus_calc_config.hpp  xeus_calc_interpreter.hpp
include/xeus-sqlite/: utils.hpp  xeus_sqlite_config.hpp  xeus_sqlite_interpreter.hpp  xvega_bindings.hpp  xvega_sqlite.hpp
notebooks/: Xeus-calc.ipynb  chinook.db
share/jupyter/kernels/xcalc/: kernel.json  kernel.json.in
share/jupyter/kernels/xsqlite/: kernel.json  kernel.json.in
src/: main.cpp  main_emscripten_kernel.cpp  post.js  utils.cpp  xeus_calc_interpreter.cpp  xeus_sqlite_interpreter.cpp  xeus_sqlite_interpreter.cpp.orig  xlite.cpp  xparser.hpp  xvega_bindings.cpp  xvega_sqlite.cpp
test/: CMakeLists.txt  downloadGTest.cmake.in  main.cpp  test_calculator.cpp  test_db.cpp
